# pyTermTk

./: .gitignore  .gitmodules  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  LICENSE  Makefile  README.md  TermTk  genindex.html  index.html  link.to.new.doc.html  objects.inv  py-modindex.html  pyproject.toml  run.dumbPaintTool.sh  run.tlogg.sh  run.ttkDesigner.sh  run.ttkode.sh  search.html  searchindex.js  setup.dumbPaintTool.py  setup.py  setup.ttkDesigner.py  untitled.003.DPT.json  untitled.DPT.002.json  untitled.DPT.Ansi.txt  untitled.DPT.json
.github/: dependabot.yml  (+1 more)
apps/dumbPaintTool/: CHANGELOG.md  README.md  main.py  pyproject.toml  web.ttk.package.json
apps/dumbPaintTool/app/: canvaslayer.py  cfg.py  glbls.py  importimage.py  main.py  maintemplate.py  paintarea.py  palette.py
apps/dumbPaintTool/app/filters/: __init__.py
apps/dumbPaintTool/app/state/: __init__.py
apps/dumbPaintTool/dumbPaintTool/: __init__.py
apps/dumbPaintTool/dumbPaintTool/app/: __init__.py  about.py  cfg.py  layersctrl.py  main.py  maintemplate.py  paintarea.py  palette.py  textarea.py
apps/dumbPaintTool/dumbPaintTool/app/state/: layers.py
apps/tlogg/: CHANGELOG.md  Makefile  README.md  pyproject.toml
apps/tlogg/tlogg/: __init__.py  __main__.py  helper.py  plugin.py  proxy.py
apps/tlogg/tlogg/app/: __init__.py  about.py  cfg.py  filetree.py  fileviewer.py  glbl.py  highlighters.py  loggwidget.py  main.py  notepad.py  options.py  predefinedfilters.py
apps/tlogg/tlogg/plugins/: fileexplorer.py  jsonnviewer.py  testplugin.py  testplugin1.py
apps/tlogg/tools/: create_log.py  import.filters.from.klogg.py
apps/tlogg/tools/test.config/: colors.yaml  options.yaml
apps/ttkDesigner/: CHANGELOG.md  README.md  __init__.py  __main__.py  pyproject.toml
apps/ttkDesigner/app/: about.py  cfg.py  propertyeditor.py  treeinspector.py
apps/ttkDesigner/app/superobj/: superlayout.py  superlayouthbox.py  superlayoutvbox.py  superobj.py  superwidgetframe.py  superwidgetradiobutton.py  superwidgettextedit.py
apps/ttkDesigner/ttkDesigner/: __init__.py
apps/ttkDesigner/ttkDesigner/app/: __init__.py  about.py  cfg.py  main.py  menuBarEditor.py  propertyeditor.py
apps/ttkDesigner/ttkDesigner/app/superobj/: __init__.py  supercontrol.py  superlayoutgrid.py  superwidget.py  superwidgetcontainer.py  superwidgetmenubutton.py
apps/ttkDesigner/ttkDesigner/tui/: quickExport.tui.json
apps/ttkDesigner/tui/: newWindow.tui.json
apps/ttkode/: CHANGELOG.md  README.md  pyproject.toml
apps/ttkode/tests/: README.md  conftest.py  test_config.py  test_helper.py  test_plugin.py  test_proxy.py  test_search_file.py
apps/ttkode/ttkode/: __init__.py  __main__.py  helper.py  plugin.py  proxy.py
apps/ttkode/ttkode/app/: __init__.py  about.py  activitybar.py  cfg.py  kodeformatter.py  kodetextdocument.py  kodetextedit.py  main.py  options.py  state.py  ttkode.py  ttkode_terminal.py
apps/ttkode/ttkode/app/command_palette/: command_palette.py  command_palette_items.py  search_file_threading.py
apps/ttkode/ttkode/app/helpers/: search_file.py
apps/ttkode/ttkode/plugins/: _010_findplugin.py  _020_debugplugin.py  _030_pytestplugin.py  testplugin.py  testplugin1.py
apps/ttkode/ttkode/plugins/_010/: findwidget.py
apps/ttkode/ttkode/plugins/_030/: _main_scan.py  pytest_data.py  pytest_engine.py  pytest_glue.py  pytest_tree.py  pytest_widget.py
libs/pyTermTk/: CHANGELOG.md  pyproject.toml
libs/pyTermTk/TermTk/: __init__.py
libs/pyTermTk/TermTk/TTkAbstract/: __init__.py  abstract_list_item.py  abstractitemmodel.py  abstractscrollarea.py  abstractscrollview.py  abstracttablemodel.py  abstracttablestyle.py
libs/pyTermTk/TermTk/TTkCore/: __init__.py  canvas.py  cfg.py  color.py  constant.py  filebuffer.py  helper.py  log.py  propertyanimation.py  shortcut.py  signal.py  string.py  timer.py  timer_interface.py  timer_pyodide.py  timer_unix.py  ttk.py  util.py
libs/pyTermTk/TermTk/TTkCore/TTkTerm/: __init__.py  colors.py  colors_ansi_map.py  input.py  input_mono.py  input_thread.py  inputkey.py  inputmouse.py  term.py  term_base.py
libs/pyTermTk/TermTk/TTkCore/drivers/: __init__.py  _unused_.unix_thread.py  term_unix.py  term_unix_common.py  term_unix_darwin.py  term_unix_linux.py  term_unix_serial.py  term_windows.py  unix.py  unix_gpm.py  unix_thread.py  windows.py
libs/pyTermTk/TermTk/TTkCrossTools/: savetools.py
libs/pyTermTk/TermTk/TTkGui/: __init__.py  clipboard.py  drag.py  textcursor.py  textdocument.py  textdocument_highlight_pygments.py  textwrap1.py  tooltip.py
libs/pyTermTk/TermTk/TTkGui/TTkTextWrap/: __init__.py  text_wrap.py  text_wrap_data.py  text_wrap_engine.py  (+5 more)
libs/pyTermTk/TermTk/TTkLayouts/: __init__.py  boxlayout.py  gridlayout.py  layout.py  layoutitem.py
libs/pyTermTk/TermTk/TTkTemplates/: mouseevents.py
libs/pyTermTk/TermTk/TTkTestWidgets/: keypressview.py  logviewer.py  testabstractscroll.py  testwidget.py  testwidgetsizes.py  tominspector.py
libs/pyTermTk/TermTk/TTkTheme/: __init__.py  draw_ascii.py  draw_utf8.py  fileicon_ascii.py  fileicon_nerd.py  theme.py
libs/pyTermTk/TermTk/TTkTypes/: __init__.py  types.py
libs/pyTermTk/TermTk/TTkUiTools/: __init__.py  uiloader.py  uiproperties.py
libs/pyTermTk/TermTk/TTkWidgets/: __init__.py  about.py  apptemplate.py  button.py  checkbox.py  combobox.py  container.py  datetime.py  datetime_date.py  datetime_date_form.py  datetime_datetime.py  datetime_time.py  frame.py  image.py  kodetab.py  label.py  lineedit.py  list_.py  listwidget.py  listwidget_item.py  menu.py  menubar.py  radiobutton.py  rootcontainer.py  scrollarea.py  scrollbar.py  slider.py  spacer.py  spinbox.py  splitter.py  tabwidget.py  texedit.py  texeditruler.py  text_edit.py  text_edit_ruler.py  text_edit_view.py  widget.py  window.py
tools/ci/: pyproject.toml  release_helper.py  release_helper_test.py
tools/ci/ci_tools/: release_helper.py  release_save.py
tools/ci/ci_tools/social/: notify_bluesky.py  notify_discord.py  notify_github_discussion.py  notify_twitter.py  social_common.py
tools/ci/social/: social_common.py
(+1824 files in other folders)
