[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttkDesigner"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Eugenio Parodi", email = "ceccopierangiolieugenio@googlemail.com"},
]
description = "ttkDesigner is a terminal user interface designer for pyTermTk applications"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Terminals",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    'pyTermTk>=0.41.17-a.0',
    'pyperclip',
    'Pillow',
]

[project.urls]
Homepage   = "https://github.com/ceccopierangiolieugenio/pyTermTk/tree/main/apps/ttkDesigner"
Repository = "https://github.com/ceccopierangiolieugenio/pyTermTk.git"
Issues     = "https://github.com/ceccopierangiolieugenio/pyTermTk/issues"
Changelog  = "https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/apps/ttkDesigner/CHANGELOG.md"

[project.scripts]
ttkDesigner = "ttkDesigner:main"

[tool.setuptools]
packages = ["ttkDesigner", "ttkDesigner.app", "ttkDesigner.app.superobj"]

[tool.setuptools.package-data]
ttkDesigner = ["tui/*"]

[tool.setuptools.dynamic]
version = {attr = "ttkDesigner.__version__"}
